force-app/main/default/objects/smagicinteract__Message_Object_Config__c/smagicinteract__Message_Object_Config__c.object-meta.xml
<CustomObject>
    <label>Message Object Config</label>
    <nameField>
        <label>Message Object Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Message Object Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>