force-app/main/default/objects/smagicinteract__Message_Object_Config__c/fields/smagicinteract__Name_Field__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Name_Field__c</fullName>
    <description>This field contains the API name of the name field of the object.</description>
    <label>Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>