force-app/main/default/objects/smagicinteract__Message_Object_Config__c/fields/smagicinteract__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Object_Name__c</fullName>
    <description>This field contains the object name.</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>