force-app/main/default/objects/smagicinteract__Message_Object_Config__c/fields/smagicinteract__Opt_Out_Field__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Opt_Out_Field__c</fullName>
    <description>This field contains the API name of OptOut field.</description>
    <label>Opt Out Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>