force-app/main/default/objects/smagicinteract__Message_Object_Config__c/fields/smagicinteract__Opt_Out_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Opt_Out_Field_Value__c</fullName>
    <description>This field contains the value of the OptOut.</description>
    <label>Opt Out Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>