force-app/main/default/objects/smagicinteract__Message_Object_Config__c/fields/smagicinteract__Opt_Out_Operator__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Opt_Out_Operator__c</fullName>
    <description>operator to be used to check if record is opted out</description>
    <label>Opt Out Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>notequals</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>notcontains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>