force-app/main/default/objects/smagicinteract__Message_Object_Config__c/listViews/smagicinteract__All.listView-meta.xml
<ListView>
    <fullName>smagicinteract__All</fullName>
    <columns>NAME</columns>
    <columns>smagicinteract__Object_Name__c</columns>
    <columns>smagicinteract__Name_Field__c</columns>
    <columns>smagicinteract__Opt_Out_Field__c</columns>
    <columns>smagicinteract__Opt_Out_Operator__c</columns>
    <columns>smagicinteract__Opt_Out_Field_Value__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>